docs: prevent button text from wrapping

--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ a.btn {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   transition: background-color 0.1s, border-color 0.1s;
+  white-space: nowrap;
 }
 
 a.btn:hover {
